kubernetes/projects/apps/dennispham.me/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dennispham-me
  labels:
    istio.io/dataplane-mode: ambient
