kubernetes/projects/apps/dennispham.me/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dennispham-me
  namespace: dennispham-me
spec:
  selector:
    app: dennispham-me
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
